<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">splitbill</string>
    <string name="action_settings">Settings</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

    //Menu

    <string name="drawer_open">Menu Opened</string>
    <string name="drawer_close">Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Search People</item>
        <item >Banks &amp; Cards</item>
        <item >Invite Friends</item>
        <item >Friends</item>
        <item >Pending</item>
        <item >Settings</item>
        <item >Log out</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_search</item>
        <item>@drawable/ic_cards</item>
        <item>@drawable/ic_invites</item>
        <item>@drawable/ic_friend</item>-->
        <item>@drawable/ic_pending</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>



    <!-- AuthenticatorActivity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_sign_in">Log in</string>
    <string name="label_forgotpassword">Forgot Password?</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string name="label_fb_login">Facebook</string>
    <string name="label_description">Simple, Wealth Sharing</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_send_email">send</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="label_reset">reset</string>
    <string name="label_newpassword">New Password</string>
    <string name="label_cfpassword">Confirm Password</string>
    <string name="label_passwordcode">Password Code</string>
    <string name="error_invalid_password">Please enter your password</string>
    <string name="error_field_required">Please enter your email</string>
    <string name="error_invalid_email">Your email address is invalid, please try again</string>
    <string name="invaliduser">Your username or password is invalid.Please try again.</string>
    <string name="facebook_app_id">1588853734665743</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="fblogin">Facebook Login</string>
    <string name="signupmsg">Your username is invalid, please try again</string>
    <string name="notification">notification</string>
    <string name="transaction">transaction</string>
    <string name="Cash_out">Cash Out</string>
    <string name="title_activity_creditactivity">creditactivity</string>
    <string name="cardnumber">CardNumber</string>

    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>

    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>

    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>

    <string name="ok">OK</string>
    <string name="label_add_credit">Credit</string>

</resources>
